[gd_scene load_steps=20 format=3 uid="uid://v1yfeb8q8jlw"]

[ext_resource type="Script" path="res://addons/cardengine/ui/card_engine_ui.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://djjrd4jj58kn3" path="res://addons/cardengine/ui/dialogs/new_database_dialog/new_database_dialog.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://qx8jq4hy8vdw" path="res://addons/cardengine/ui/dialogs/generic_confirm_dialog/generic_confirm_dialog.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://br6duejkejpqf" path="res://addons/cardengine/ui/dialogs/edit_database_dialog/edit_database_dialog.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://cvrxhoex7kvke" path="res://addons/cardengine/ui/dialogs/category_dialog/category_dialog.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://du31hutx81out" path="res://addons/cardengine/ui/dialogs/value_dialog/value_dialog.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://x6eg0atv7rim" path="res://addons/cardengine/ui/dialogs/text_dialog/text_dialog.tscn" id="7"]
[ext_resource type="Script" path="res://addons/cardengine/ui/databases_ui.gd" id="8"]
[ext_resource type="Script" path="res://addons/cardengine/ui/cards_ui.gd" id="9"]
[ext_resource type="Script" path="res://addons/cardengine/ui/containers_ui.gd" id="10"]
[ext_resource type="PackedScene" uid="uid://dt6phs2x5duwh" path="res://addons/cardengine/ui/dialogs/new_container_dialog/new_container_dialog.tscn" id="11"]
[ext_resource type="PackedScene" uid="uid://t3r1fyyn3vrg" path="res://addons/cardengine/ui/dialogs/edit_container_dialog/edit_container_dialog.tscn" id="12"]
[ext_resource type="Script" path="res://addons/cardengine/ui/animations_ui.gd" id="13"]
[ext_resource type="PackedScene" uid="uid://3kbjh4eqduec" path="res://addons/cardengine/ui/dialogs/step_value_dialog/step_value_dialog.tscn" id="14"]
[ext_resource type="PackedScene" uid="uid://colhmxsjlebm" path="res://addons/cardengine/ui/dialogs/step_transi_dialog/step_transi_dialog.tscn" id="15"]
[ext_resource type="PackedScene" uid="uid://d3xox8kcllobh" path="res://addons/cardengine/ui/dialogs/new_animation_dialog/new_animation_dialog.tscn" id="16"]
[ext_resource type="PackedScene" uid="uid://buf4jmcvkpxt3" path="res://addons/cardengine/ui/dialogs/anim_preview_dialog/anim_preview_dialog.tscn" id="17"]
[ext_resource type="Script" path="res://addons/cardengine/ui/effects_ui.gd" id="18"]
[ext_resource type="PackedScene" uid="uid://ustxmub5eq3u" path="res://addons/cardengine/ui/dialogs/new_effect_dialog/new_effect_dialog.tscn" id="19"]

[node name="CardEngineUI" type="Control"]
custom_minimum_size = Vector2(0, 550)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="TabBar" type="TabContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Databases" type="Control" parent="TabBar"]
layout_mode = 2
script = ExtResource("8")

[node name="DatabaseLayout" type="VBoxContainer" parent="TabBar/Databases"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Toolbar" type="HBoxContainer" parent="TabBar/Databases/DatabaseLayout"]
layout_mode = 2

[node name="CreateBtn" type="Button" parent="TabBar/Databases/DatabaseLayout/Toolbar"]
layout_mode = 2
tooltip_text = "Opens the database creation dialog"
text = "Create new database"

[node name="EditBtn" type="Button" parent="TabBar/Databases/DatabaseLayout/Toolbar"]
layout_mode = 2
tooltip_text = "Opens the database edit dialog. Displays all the cards in a list. Allows edit, duplicate and delete of cards. "
disabled = true
text = "Edit database"

[node name="DeleteBtn" type="Button" parent="TabBar/Databases/DatabaseLayout/Toolbar"]
layout_mode = 2
tooltip_text = "Removes the database file with all the cards in it. Not reversible."
disabled = true
text = "Delete database"

[node name="DatabaseList" type="ItemList" parent="TabBar/Databases/DatabaseLayout"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Single-click to select an element.
Double-click to edit the database name."
item_count = 1
item_0/text = "main: Main Database (20 cards)"

[node name="Cards" type="Control" parent="TabBar"]
visible = false
layout_mode = 2
script = ExtResource("9")

[node name="CardLayout" type="VBoxContainer" parent="TabBar/Cards"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ToolLayout" type="HBoxContainer" parent="TabBar/Cards/CardLayout"]
layout_mode = 2

[node name="CardIdLbl" type="Label" parent="TabBar/Cards/CardLayout/ToolLayout"]
layout_mode = 2
text = "Card ID"

[node name="CardId" type="LineEdit" parent="TabBar/Cards/CardLayout/ToolLayout"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
tooltip_text = "Fill in a card identifier to either save, or create if not existing, or load."
caret_blink = true

[node name="SaveBtn" type="Button" parent="TabBar/Cards/CardLayout/ToolLayout"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
tooltip_text = "Saves or creates a card with the given ID and data in the selected dabase."
disabled = true
text = "Save to"

[node name="LoadBtn" type="Button" parent="TabBar/Cards/CardLayout/ToolLayout"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
tooltip_text = "Loads the card with the given ID from the selected database."
disabled = true
text = "Load from"

[node name="DatabaseSelect" type="OptionButton" parent="TabBar/Cards/CardLayout/ToolLayout"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
tooltip_text = "The database used to save and load cards."

[node name="SuccesLbl" type="Label" parent="TabBar/Cards/CardLayout/ToolLayout"]
layout_mode = 2
theme_override_colors/font_color = Color(0.611765, 0.917647, 0.27451, 1)

[node name="ErrorLbl" type="Label" parent="TabBar/Cards/CardLayout/ToolLayout"]
layout_mode = 2
theme_override_colors/font_color = Color(0.917647, 0.27451, 0.27451, 1)

[node name="DataLayout" type="GridContainer" parent="TabBar/Cards/CardLayout"]
layout_mode = 2
size_flags_vertical = 3
columns = 3

[node name="CategLbl" type="Label" parent="TabBar/Cards/CardLayout/DataLayout"]
layout_mode = 2
size_flags_horizontal = 3
text = "Categories"

[node name="ValuesLbl" type="Label" parent="TabBar/Cards/CardLayout/DataLayout"]
layout_mode = 2
size_flags_horizontal = 3
text = "Values"

[node name="TextsLbl" type="Label" parent="TabBar/Cards/CardLayout/DataLayout"]
layout_mode = 2
size_flags_horizontal = 3
text = "Texts"

[node name="CategList" type="ItemList" parent="TabBar/Cards/CardLayout/DataLayout"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Single-click to select.
Double-click to edit."

[node name="ValuesList" type="ItemList" parent="TabBar/Cards/CardLayout/DataLayout"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Single-click to select.
Double-click to edit."

[node name="TextsList" type="ItemList" parent="TabBar/Cards/CardLayout/DataLayout"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Single-click to select.
Double-click to edit."

[node name="CategToolLayout" type="HBoxContainer" parent="TabBar/Cards/CardLayout/DataLayout"]
layout_mode = 2

[node name="AddCategBtn" type="Button" parent="TabBar/Cards/CardLayout/DataLayout/CategToolLayout"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Opens the creation dialog."
text = "Add"

[node name="DelCategBtn" type="Button" parent="TabBar/Cards/CardLayout/DataLayout/CategToolLayout"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Deletes the selected element."
disabled = true
text = "Delete"

[node name="ValuesToolLayout" type="HBoxContainer" parent="TabBar/Cards/CardLayout/DataLayout"]
layout_mode = 2

[node name="AddValBtn" type="Button" parent="TabBar/Cards/CardLayout/DataLayout/ValuesToolLayout"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Opens the creation dialog."
text = "Add"

[node name="DelValBtn" type="Button" parent="TabBar/Cards/CardLayout/DataLayout/ValuesToolLayout"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Deletes the selected element."
disabled = true
text = "Delete"

[node name="TextsToolLayout" type="HBoxContainer" parent="TabBar/Cards/CardLayout/DataLayout"]
layout_mode = 2

[node name="AddTxtBtn" type="Button" parent="TabBar/Cards/CardLayout/DataLayout/TextsToolLayout"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Opens the creation dialog."
text = "Add"

[node name="DelTxtBtn" type="Button" parent="TabBar/Cards/CardLayout/DataLayout/TextsToolLayout"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Deletes the selected element."
disabled = true
text = "Delete"

[node name="Containers" type="Control" parent="TabBar"]
visible = false
layout_mode = 2
script = ExtResource("10")

[node name="ContainersLayout" type="VBoxContainer" parent="TabBar/Containers"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Toolbar" type="HBoxContainer" parent="TabBar/Containers/ContainersLayout"]
layout_mode = 2

[node name="CreateBtn" type="Button" parent="TabBar/Containers/ContainersLayout/Toolbar"]
layout_mode = 2
tooltip_text = "Opens the container creation dialog."
text = "Create container"

[node name="EditBtn" type="Button" parent="TabBar/Containers/ContainersLayout/Toolbar"]
layout_mode = 2
tooltip_text = "Opens the container edition dialog."
disabled = true
text = "Edit container"

[node name="OpenBtn" type="Button" parent="TabBar/Containers/ContainersLayout/Toolbar"]
layout_mode = 2
tooltip_text = "Opens the container scene in the Godot editor."
disabled = true
text = "Open container"

[node name="DeleteBtn" type="Button" parent="TabBar/Containers/ContainersLayout/Toolbar"]
layout_mode = 2
tooltip_text = "Removes a container and the associated files. Not reversible."
disabled = true
text = "Delete container"

[node name="ContainerList" type="ItemList" parent="TabBar/Containers/ContainersLayout"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Single-click to select.
Double-click to change the name."
item_count = 3
item_0/text = "card_list: CardList"
item_1/text = "hand: HandContainer"
item_2/text = "home_display: HomeDisplay"

[node name="Animations" type="Control" parent="TabBar"]
visible = false
layout_mode = 2
script = ExtResource("13")

[node name="AnimationsLayout" type="VBoxContainer" parent="TabBar/Animations"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Toolbar" type="HBoxContainer" parent="TabBar/Animations/AnimationsLayout"]
layout_mode = 2

[node name="CreateBtn" type="Button" parent="TabBar/Animations/AnimationsLayout/Toolbar"]
layout_mode = 2
tooltip_text = "Opens the animation creation dialog."
text = "Create animation"

[node name="OrLbl" type="Label" parent="TabBar/Animations/AnimationsLayout/Toolbar"]
layout_mode = 2
text = "or"

[node name="AnimSelect" type="OptionButton" parent="TabBar/Animations/AnimationsLayout/Toolbar"]
layout_mode = 2
tooltip_text = "The animation being edited."

[node name="EditBtn" type="Button" parent="TabBar/Animations/AnimationsLayout/Toolbar"]
layout_mode = 2
tooltip_text = "Changes animation name."
disabled = true
text = "Edit animation"

[node name="PreviewBtn" type="Button" parent="TabBar/Animations/AnimationsLayout/Toolbar"]
layout_mode = 2
tooltip_text = "Opens the preview dialog to see what the animation looks like."
disabled = true
text = "Preview animation"

[node name="SaveBtn" type="Button" parent="TabBar/Animations/AnimationsLayout/Toolbar"]
layout_mode = 2
tooltip_text = "Writes the animation to disk."
disabled = true
text = "Save animation"

[node name="ResetBtn" type="Button" parent="TabBar/Animations/AnimationsLayout/Toolbar"]
layout_mode = 2
tooltip_text = "Reloads the animation from disk."
disabled = true
text = "Reset animation"

[node name="DeleteBtn" type="Button" parent="TabBar/Animations/AnimationsLayout/Toolbar"]
layout_mode = 2
tooltip_text = "Removes the animation from disk. Not reversible."
disabled = true
text = "Delete animation"

[node name="AnimChainLayout" type="HBoxContainer" parent="TabBar/Animations/AnimationsLayout"]
layout_mode = 2

[node name="AnimChainLbl" type="Label" parent="TabBar/Animations/AnimationsLayout/AnimChainLayout"]
layout_mode = 2
text = "Animation chain"

[node name="IdleBtn" type="Button" parent="TabBar/Animations/AnimationsLayout/AnimChainLayout"]
layout_mode = 2
tooltip_text = "Loads the animation block sequences."
disabled = true
toggle_mode = true
text = "Idle Loop"

[node name="ChainSep1" type="Label" parent="TabBar/Animations/AnimationsLayout/AnimChainLayout"]
layout_mode = 2
text = ">"

[node name="FocusedBtn" type="Button" parent="TabBar/Animations/AnimationsLayout/AnimChainLayout"]
layout_mode = 2
tooltip_text = "Loads the animation block sequences."
disabled = true
toggle_mode = true
text = "Focused Animation"

[node name="ChainSep2" type="Label" parent="TabBar/Animations/AnimationsLayout/AnimChainLayout"]
layout_mode = 2
text = ">"

[node name="ActivatedBtn" type="Button" parent="TabBar/Animations/AnimationsLayout/AnimChainLayout"]
layout_mode = 2
tooltip_text = "Loads the animation block sequences."
disabled = true
toggle_mode = true
text = "Activated Animation"

[node name="ChainSep3" type="Label" parent="TabBar/Animations/AnimationsLayout/AnimChainLayout"]
layout_mode = 2
text = ">"

[node name="DeactivatedBtn" type="Button" parent="TabBar/Animations/AnimationsLayout/AnimChainLayout"]
layout_mode = 2
tooltip_text = "Loads the animation block sequences."
disabled = true
toggle_mode = true
text = "Deactivated Animation"

[node name="ChainSep4" type="Label" parent="TabBar/Animations/AnimationsLayout/AnimChainLayout"]
layout_mode = 2
text = ">"

[node name="UnfocusedBtn" type="Button" parent="TabBar/Animations/AnimationsLayout/AnimChainLayout"]
layout_mode = 2
tooltip_text = "Loads the animation block sequences."
disabled = true
toggle_mode = true
text = "Unfocused Animation"

[node name="AnimEditLayout" type="HBoxContainer" parent="TabBar/Animations/AnimationsLayout"]
layout_mode = 2
size_flags_vertical = 3

[node name="SeqLayout" type="HBoxContainer" parent="TabBar/Animations/AnimationsLayout/AnimEditLayout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PosSeqContainer" type="VBoxContainer" parent="TabBar/Animations/AnimationsLayout/AnimEditLayout/SeqLayout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PosSeqLbl" type="Label" parent="TabBar/Animations/AnimationsLayout/AnimEditLayout/SeqLayout/PosSeqContainer"]
layout_mode = 2
text = "Position Sequence"

[node name="PosSeqToolsLayout" type="VBoxContainer" parent="TabBar/Animations/AnimationsLayout/AnimEditLayout/SeqLayout/PosSeqContainer"]
layout_mode = 2

[node name="PosSeqScroll" type="ScrollContainer" parent="TabBar/Animations/AnimationsLayout/AnimEditLayout/SeqLayout/PosSeqContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PosSeqLayout" type="VBoxContainer" parent="TabBar/Animations/AnimationsLayout/AnimEditLayout/SeqLayout/PosSeqContainer/PosSeqScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScaleSeqContainer" type="VBoxContainer" parent="TabBar/Animations/AnimationsLayout/AnimEditLayout/SeqLayout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScaleSeqLbl" type="Label" parent="TabBar/Animations/AnimationsLayout/AnimEditLayout/SeqLayout/ScaleSeqContainer"]
layout_mode = 2
text = "Scale Sequence"

[node name="ScaleSeqToolsLayout" type="VBoxContainer" parent="TabBar/Animations/AnimationsLayout/AnimEditLayout/SeqLayout/ScaleSeqContainer"]
layout_mode = 2

[node name="ScaleSeqScroll" type="ScrollContainer" parent="TabBar/Animations/AnimationsLayout/AnimEditLayout/SeqLayout/ScaleSeqContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScaleSeqLayout" type="VBoxContainer" parent="TabBar/Animations/AnimationsLayout/AnimEditLayout/SeqLayout/ScaleSeqContainer/ScaleSeqScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RotSeqContainer" type="VBoxContainer" parent="TabBar/Animations/AnimationsLayout/AnimEditLayout/SeqLayout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RotSeqLbl" type="Label" parent="TabBar/Animations/AnimationsLayout/AnimEditLayout/SeqLayout/RotSeqContainer"]
layout_mode = 2
text = "Rotation Sequence"

[node name="RotSeqToolsLayout" type="VBoxContainer" parent="TabBar/Animations/AnimationsLayout/AnimEditLayout/SeqLayout/RotSeqContainer"]
layout_mode = 2

[node name="RotSeqScroll" type="ScrollContainer" parent="TabBar/Animations/AnimationsLayout/AnimEditLayout/SeqLayout/RotSeqContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RotSeqLayout" type="VBoxContainer" parent="TabBar/Animations/AnimationsLayout/AnimEditLayout/SeqLayout/RotSeqContainer/RotSeqScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Effects" type="Control" parent="TabBar"]
visible = false
layout_mode = 2
script = ExtResource("18")

[node name="EffectLayout" type="VBoxContainer" parent="TabBar/Effects"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Toolbar" type="HBoxContainer" parent="TabBar/Effects/EffectLayout"]
layout_mode = 2

[node name="CreateBtn" type="Button" parent="TabBar/Effects/EffectLayout/Toolbar"]
layout_mode = 2
tooltip_text = "Opens the effect creation dialog."
text = "Create new effect"

[node name="EditBtn" type="Button" parent="TabBar/Effects/EffectLayout/Toolbar"]
layout_mode = 2
tooltip_text = "Opens the effect script in the Godot editor."
disabled = true
text = "Edit effect"

[node name="DeleteBtn" type="Button" parent="TabBar/Effects/EffectLayout/Toolbar"]
layout_mode = 2
tooltip_text = "Removes the effect and associated files. Not reversible."
disabled = true
text = "Delete effect"

[node name="EffectList" type="ItemList" parent="TabBar/Effects/EffectLayout"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Single-click to select.
Double-click to change the name."
item_count = 3
item_0/text = "mana_double: Double the Mana"
item_1/text = "mana_incr: Mana +1"
item_2/text = "mana_decr: Mana -1"

[node name="Dialogs" type="Control" parent="."]
visible = false
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 32.0
offset_right = -4.0
offset_bottom = -4.0

[node name="NewDatabaseDialog" parent="Dialogs" instance=ExtResource("2")]

[node name="GenericConfirmDialog" parent="Dialogs" instance=ExtResource("3")]

[node name="EditDatabaseDialog" parent="Dialogs" instance=ExtResource("4")]

[node name="CategoryDialog" parent="Dialogs" instance=ExtResource("5")]

[node name="ValueDialog" parent="Dialogs" instance=ExtResource("6")]

[node name="TextDialog" parent="Dialogs" instance=ExtResource("7")]

[node name="NewContainerDialog" parent="Dialogs" instance=ExtResource("11")]

[node name="EditContainerDialog" parent="Dialogs" instance=ExtResource("12")]

[node name="NewAnimationDialog" parent="Dialogs" instance=ExtResource("16")]

[node name="StepValueDialog" parent="Dialogs" instance=ExtResource("14")]

[node name="StepTransiDialog" parent="Dialogs" instance=ExtResource("15")]

[node name="AnimPreviewDialog" parent="Dialogs" instance=ExtResource("17")]

[node name="NewEffectDialog" parent="Dialogs" instance=ExtResource("19")]

[connection signal="pressed" from="TabBar/Databases/DatabaseLayout/Toolbar/CreateBtn" to="TabBar/Databases" method="_on_CreateBtn_pressed"]
[connection signal="pressed" from="TabBar/Databases/DatabaseLayout/Toolbar/EditBtn" to="TabBar/Databases" method="_on_EditBtn_pressed"]
[connection signal="pressed" from="TabBar/Databases/DatabaseLayout/Toolbar/DeleteBtn" to="TabBar/Databases" method="_on_DeleteBtn_pressed"]
[connection signal="item_activated" from="TabBar/Databases/DatabaseLayout/DatabaseList" to="TabBar/Databases" method="_on_DatabaseList_item_activated"]
[connection signal="item_selected" from="TabBar/Databases/DatabaseLayout/DatabaseList" to="TabBar/Databases" method="_on_DatabaseList_item_selected"]
[connection signal="text_changed" from="TabBar/Cards/CardLayout/ToolLayout/CardId" to="TabBar/Cards" method="_on_CardId_text_changed"]
[connection signal="pressed" from="TabBar/Cards/CardLayout/ToolLayout/SaveBtn" to="TabBar/Cards" method="_on_SaveBtn_pressed"]
[connection signal="pressed" from="TabBar/Cards/CardLayout/ToolLayout/LoadBtn" to="TabBar/Cards" method="_on_LoadBtn_pressed"]
[connection signal="item_selected" from="TabBar/Cards/CardLayout/ToolLayout/DatabaseSelect" to="TabBar/Cards" method="_on_DatabaseSelect_item_selected"]
[connection signal="item_activated" from="TabBar/Cards/CardLayout/DataLayout/CategList" to="TabBar/Cards" method="_on_CategList_item_activated"]
[connection signal="item_selected" from="TabBar/Cards/CardLayout/DataLayout/CategList" to="TabBar/Cards" method="_on_CategList_item_selected"]
[connection signal="item_activated" from="TabBar/Cards/CardLayout/DataLayout/ValuesList" to="TabBar/Cards" method="_on_ValuesList_item_activated"]
[connection signal="item_selected" from="TabBar/Cards/CardLayout/DataLayout/ValuesList" to="TabBar/Cards" method="_on_ValuesList_item_selected"]
[connection signal="item_activated" from="TabBar/Cards/CardLayout/DataLayout/TextsList" to="TabBar/Cards" method="_on_TextsList_item_activated"]
[connection signal="item_selected" from="TabBar/Cards/CardLayout/DataLayout/TextsList" to="TabBar/Cards" method="_on_TextsList_item_selected"]
[connection signal="pressed" from="TabBar/Cards/CardLayout/DataLayout/CategToolLayout/AddCategBtn" to="TabBar/Cards" method="_on_AddCategBtn_pressed"]
[connection signal="pressed" from="TabBar/Cards/CardLayout/DataLayout/CategToolLayout/DelCategBtn" to="TabBar/Cards" method="_on_DelCategBtn_pressed"]
[connection signal="pressed" from="TabBar/Cards/CardLayout/DataLayout/ValuesToolLayout/AddValBtn" to="TabBar/Cards" method="_on_AddValBtn_pressed"]
[connection signal="pressed" from="TabBar/Cards/CardLayout/DataLayout/ValuesToolLayout/DelValBtn" to="TabBar/Cards" method="_on_DelValBtn_pressed"]
[connection signal="pressed" from="TabBar/Cards/CardLayout/DataLayout/TextsToolLayout/AddTxtBtn" to="TabBar/Cards" method="_on_AddTxtBtn_pressed"]
[connection signal="pressed" from="TabBar/Cards/CardLayout/DataLayout/TextsToolLayout/DelTxtBtn" to="TabBar/Cards" method="_on_DelTxtBtn_pressed"]
[connection signal="pressed" from="TabBar/Containers/ContainersLayout/Toolbar/CreateBtn" to="TabBar/Containers" method="_on_CreateBtn_pressed"]
[connection signal="pressed" from="TabBar/Containers/ContainersLayout/Toolbar/EditBtn" to="TabBar/Containers" method="_on_EditBtn_pressed"]
[connection signal="pressed" from="TabBar/Containers/ContainersLayout/Toolbar/OpenBtn" to="TabBar/Containers" method="_on_OpenBtn_pressed"]
[connection signal="pressed" from="TabBar/Containers/ContainersLayout/Toolbar/DeleteBtn" to="TabBar/Containers" method="_on_DeleteBtn_pressed"]
[connection signal="item_activated" from="TabBar/Containers/ContainersLayout/ContainerList" to="TabBar/Containers" method="_on_ContainerList_item_activated"]
[connection signal="item_selected" from="TabBar/Containers/ContainersLayout/ContainerList" to="TabBar/Containers" method="_on_ContainerList_item_selected"]
[connection signal="pressed" from="TabBar/Animations/AnimationsLayout/Toolbar/CreateBtn" to="TabBar/Animations" method="_on_CreateBtn_pressed"]
[connection signal="item_selected" from="TabBar/Animations/AnimationsLayout/Toolbar/AnimSelect" to="TabBar/Animations" method="_on_AnimSelect_item_selected"]
[connection signal="pressed" from="TabBar/Animations/AnimationsLayout/Toolbar/EditBtn" to="TabBar/Animations" method="_on_EditBtn_pressed"]
[connection signal="pressed" from="TabBar/Animations/AnimationsLayout/Toolbar/PreviewBtn" to="TabBar/Animations" method="_on_PreviewBtn_pressed"]
[connection signal="pressed" from="TabBar/Animations/AnimationsLayout/Toolbar/SaveBtn" to="TabBar/Animations" method="_on_SaveBtn_pressed"]
[connection signal="pressed" from="TabBar/Animations/AnimationsLayout/Toolbar/ResetBtn" to="TabBar/Animations" method="_on_ResetBtn_pressed"]
[connection signal="pressed" from="TabBar/Animations/AnimationsLayout/Toolbar/DeleteBtn" to="TabBar/Animations" method="_on_DeleteBtn_pressed"]
[connection signal="pressed" from="TabBar/Animations/AnimationsLayout/AnimChainLayout/IdleBtn" to="TabBar/Animations" method="_on_IdleBtn_pressed"]
[connection signal="pressed" from="TabBar/Animations/AnimationsLayout/AnimChainLayout/FocusedBtn" to="TabBar/Animations" method="_on_FocusedBtn_pressed"]
[connection signal="pressed" from="TabBar/Animations/AnimationsLayout/AnimChainLayout/ActivatedBtn" to="TabBar/Animations" method="_on_ActivatedBtn_pressed"]
[connection signal="pressed" from="TabBar/Animations/AnimationsLayout/AnimChainLayout/DeactivatedBtn" to="TabBar/Animations" method="_on_DeactivatedBtn_pressed"]
[connection signal="pressed" from="TabBar/Animations/AnimationsLayout/AnimChainLayout/UnfocusedBtn" to="TabBar/Animations" method="_on_UnfocusedBtn_pressed"]
[connection signal="pressed" from="TabBar/Effects/EffectLayout/Toolbar/CreateBtn" to="TabBar/Effects" method="_on_CreateBtn_pressed"]
[connection signal="pressed" from="TabBar/Effects/EffectLayout/Toolbar/EditBtn" to="TabBar/Effects" method="_on_EditBtn_pressed"]
[connection signal="pressed" from="TabBar/Effects/EffectLayout/Toolbar/DeleteBtn" to="TabBar/Effects" method="_on_DeleteBtn_pressed"]
[connection signal="item_activated" from="TabBar/Effects/EffectLayout/EffectList" to="TabBar/Effects" method="_on_EffectList_item_activated"]
[connection signal="item_selected" from="TabBar/Effects/EffectLayout/EffectList" to="TabBar/Effects" method="_on_EffectList_item_selected"]
[connection signal="copy_card" from="Dialogs/EditDatabaseDialog" to="TabBar/Databases" method="_on_EditDatabaseDialog_copy_card"]
[connection signal="delete_card" from="Dialogs/EditDatabaseDialog" to="TabBar/Cards" method="_on_EditDatabaseDialog_delete_card"]
[connection signal="edit_card" from="Dialogs/EditDatabaseDialog" to="TabBar/Cards" method="_on_EditDatabaseDialog_edit_card"]
